src/z80asm/z80asm2/t/30-directive/expected/ifndef_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/ifndef_01.asm
Assembling t/30-directive/input/ifndef_01.asm...
t/30-directive/input/ifndef_01.asm:1:7: error: Expected identifier after IFNDEF
    ifndef ; no symbol
          ^
t/30-directive/input/ifndef_01.asm:3:8: error: Expected identifier after IFNDEF
    ifndef 23 ; no symbol
           ^
t/30-directive/input/ifndef_01.asm:5:10: error: Unexpected token after IFNDEF: extra
    ifndef X extra ; extra input
             ^
t/30-directive/input/ifndef_01.asm:7:1: error: Unexpected ELSE directive without matching IF
    else ; else without if
    ^
t/30-directive/input/ifndef_01.asm:8:1: error: Unexpected ELSEIFNDEF directive without matching IF
    elseifndef ; elseifndef without if
    ^
t/30-directive/input/ifndef_01.asm:9:1: error: Unexpected ELIFNDEF directive without matching IF
    elifndef ; elifndef without if
    ^
t/30-directive/input/ifndef_01.asm:10:1: error: Unexpected ENDIF directive without matching IF
    endif ; endif without if
    ^
t/30-directive/input/ifndef_01.asm:13:1: error: Multiple ELSE in IF block
    else ; two elses
    ^
t/30-directive/input/ifndef_01.asm:17:1: error: Unexpected ELSEIFNDEF directive after ELSE
    elseifndef ; elseifndef after else
    ^
t/30-directive/input/ifndef_01.asm:21:1: error: Unexpected ELIFNDEF directive after ELSE
    elifndef ; elifndef after else
    ^
# file: t/30-directive/input/ifndef_01.asm
EndOfLine	"\n"	23:1	
